fix all the things! body cant use overflow: auto, surprisingly

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,4 @@
-html {
+body {
     font-size: 10px;
     font-family: 'Open Sans', sans-serif;
     box-sizing: border-box;
@@ -7,7 +7,7 @@ html {
     background-size: cover;
 }
 
-body {
+div.wrapper {
     width: 650px;
     margin: 0 auto;
     height: 100%;
